added the second section of the weppage

--- a/lp.html
+++ b/lp.html
@@ -8,12 +8,26 @@
 <body>
 
 <div class="header">
-    <div class="logo">Header Logo</div>
+    <div class="logo"><strong>Header Logo</strong></div>
     <ul class="links">
-        <li> header link one</li>
-        <li> header link two</li>
-        <li> header link three</li>
+        <li> <a href="#">header link one</a></li>
+        <li><a href="#"> header link two</a></li>
+        <li><a href="#">header link three</a></li>
     </ul>
+</div>
+<div class="mid">
+    <div class = "mid-s1">
+       <div class="s-header">This Website is awsome</div>
+       <div class="s-bodytext">This website has some subtext that goes under the main title. It is smaller font and the color is lower contrast</div>
+       <button><strong>Sign Up</strong></button>
+       
+    </div>
+    <div class="solo"> kkkkkkkkkk </div>
+
+
+
+
+
 </div>
 
 
