I finished the third section

--- a/lp.html
+++ b/lp.html
@@ -23,9 +23,31 @@
        
     </div>
     <div class="solo"> kkkkkkkkkk </div>
-
-
-
+</div>
+<div class="third">
+    <div class="t-header">Some random information</div>
+    <div class="group">
+        <div class="container">
+           <div class="shape"></div>
+           <div class="word">this is some subtext under some illustration or an image</div>
+        </div>
+        <div class="container"> 
+            <div class="shape"></div>
+            <div class ="word">this is some subtext under some illustration or an image</div>
+         </div>
+         <div class="container">
+            <div class="shape"></div>
+            <div class="word">this is some subtext under some illustration or an image</div>
+         </div>
+         <div class="container">
+            <div class="shape"></div>
+            <div class="word">this is some subtext under some illustration or an image</div>
+         </div>
+    </div>
+</div>
+<div class="fourth">
+    <div class="quote">"this is an inspiring quote,or a testimonial from a customer. Mabey its just filling up space, or people will actually read it.Who knows?
+        All I know is that it looks nice"</div>
 
 
 </div>
