--- a/lp.html
+++ b/lp.html
@@ -46,8 +46,9 @@
     </div>
 </div>
 <div class="fourth">
-    <div class="quote">"this is an inspiring quote,or a testimonial from a customer. Mabey its just filling up space, or people will actually read it.Who knows?
-        All I know is that it looks nice"</div>
+    <div class="quote"><em>"This is an inspiring quote,or a testimonial from a customer. Mabey its just filling up space, or people will actually read it.Who knows?
+    All I know is that it looks nice"</em></div>
+    <div class="author"><strong> -Thor, God of Thunder</strong></div>
 
 
 </div>
