i finished the footer.

--- a/lp.html
+++ b/lp.html
@@ -57,9 +57,15 @@
           <div class="t-sub">Sign up for our product by clicking that blue button right over there</div>
        </div>
        <button class="s-button"><strong>Sign Up</strong></button>
-
-
    </div>
+</div>
+<div class="footer">
+    <div class ="last">Copyright @ The Odin Project 2021 </div>
+
+
+
+
+
 </div>
 
 
